--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "@docusaurus/preset-classic": "^3.2.1",
     "@docusaurus/theme-mermaid": "^3.2.1",
     "@mdx-js/react": "^3.0.0",
+    "@scalar/docusaurus": "^0.2.16",
     "clsx": "^2.0.0",
+    "docusaurus-preset-openapi": "^0.7.5",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "url": "^0.11.3",
+    "webpack-merge": "^5.10.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.2.1",
