--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stakely-docs",
+  "name": "my-website",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -14,22 +14,18 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "^3.2.1",
-    "@docusaurus/preset-classic": "^3.2.1",
-    "@docusaurus/theme-mermaid": "^3.2.1",
+    "@docusaurus/core": "3.4.0",
+    "@docusaurus/preset-classic": "3.4.0",
+    "@docusaurus/theme-mermaid": "^3.4.0",
     "@mdx-js/react": "^3.0.0",
-    "@scalar/docusaurus": "^0.2.16",
     "clsx": "^2.0.0",
-    "docusaurus-preset-openapi": "^0.7.5",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "url": "^0.11.3",
-    "webpack-merge": "^5.10.0"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^3.2.1",
-    "@docusaurus/types": "^3.2.1"
+    "@docusaurus/module-type-aliases": "3.4.0",
+    "@docusaurus/types": "3.4.0"
   },
   "browserslist": {
     "production": [
