--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@docusaurus/theme-mermaid": "^3.4.0",
     "@easyops-cn/docusaurus-search-local": "^0.44.2",
     "@mdx-js/react": "^3.0.0",
+    "@scalar/docusaurus": "^0.4.69",
     "clsx": "^2.0.0",
+    "docusaurus-preset-openapi": "^0.7.5",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.3.1",
+    "url": "^0.11.4",
+    "webpack-merge": "^6.0.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.4.0",
