--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@scalar/docusaurus": "^0.3.5",
     "clsx": "^2.0.0",
     "docusaurus-preset-openapi": "^0.7.5",
+    "dotenv": "^16.4.5",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.3.1",
