--- a/.github/workflows/build-push-commit.yaml
+++ b/.github/workflows/build-push-commit.yaml
@@ -27,10 +27,10 @@ jobs:
       run: |
         if [ "${{ env.BRANCH_NAME }}" = "develop" ]
         then
-          docker build --build-arg STAKING_API_URL="https://dev-staking-api.stakely.io/docs" -t stakely/stakely-docs:${{ env.BRANCH_NAME }} .
+          docker build --build-arg STAKING_API_URL="https://dev-staking-api.stakely.io/docs" --build-arg STAKING_API_DOC_JSON_URL="https://dev-staking-api.stakely.io/docs-json" -t stakely/stakely-docs:${{ env.BRANCH_NAME }} .
         elif [ "${{ env.BRANCH_NAME }}" = "main" ]
         then
-          docker build --build-arg STAKING_API_URL="https://staking-api.stakely.io/docs" -t stakely/stakely-docs:${{ env.BRANCH_NAME }} .
+          docker build --build-arg STAKING_API_URL="https://staking-api.stakely.io/docs" --build-arg STAKING_API_DOC_JSON_URL="https://staking-api.stakely.io/docs-json" -t stakely/stakely-docs:${{ env.BRANCH_NAME }} .
         fi
         echo '${{ secrets.DOCKERHUB_PASSWORD }}' | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
         docker push stakely/stakely-docs:${{ env.BRANCH_NAME }}
