--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.0.0",
     "docusaurus-preset-openapi": "^0.7.5",
     "dotenv": "^16.4.5",
+    "ethers": "^6.16.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.3.1",
